# system-updater

./: .gitignore  Cargo.toml  Makefile  README.md  TESTING.md  justfile
daemon/: Cargo.toml
daemon/examples/: appcenter_updates.rs
daemon/src/: accounts.rs  appcenter.rs  config.rs  lib.rs  main.rs  notify.rs  signal_handler.rs  utils.rs
daemon/src/dbus/: client.rs  local_client.rs  local_server.rs  mod.rs  server.rs
daemon/src/package_managers/: apt.rs  apt_pop.rs  flatpak.rs  mod.rs  nix.rs
daemon/src/service/: mod.rs  session.rs  system.rs
data/: com.system76.SystemUpdater.Local.service  com.system76.SystemUpdater.conf  com.system76.SystemUpdater.service
debian/: changelog  control  libpop-system-updater-gtk-dev.install  libpop-system-updater-gtk.install  pop-system-updater.install  pop-system-updater.links  pop-system-updater.postinst  postinst  rules
gtk/: Cargo.toml
gtk-ffi/: Cargo.toml  build.rs  pop_system_updater_gtk.h  pop_system_updater_gtk.pc.in
gtk-ffi/src/: lib.rs
gtk/i18n/cs/: pop_system_updater_gtk.ftl
gtk/i18n/da/: pop_system_updater_gtk.ftl
gtk/i18n/de/: pop_system_updater_gtk.ftl
gtk/i18n/en/: pop_system_updater_gtk.ftl
gtk/i18n/es/: pop_system_updater_gtk.ftl
gtk/i18n/fr/: pop_system_updater_gtk.ftl
gtk/i18n/ja/: pop_system_updater_gtk.ftl
gtk/i18n/pt-BR/: pop_system_updater_gtk.ftl
gtk/i18n/sr/: pop_system_updater_gtk.ftl
gtk/i18n/tr/: pop_system_updater_gtk.ftl
gtk/src/: bsb.rs  dialog.rs  lib.rs  localize.rs  main.rs  proxy.rs  utils.rs  widget.rs
scheduler/: Cargo.toml  README.md
scheduler/examples/: simple.rs
scheduler/src/: job.rs  lib.rs  scheduler.rs
shop-zbus/: Cargo.toml
shop-zbus/src/: lib.rs
src/: config.rs  lib.rs  main.rs  signal_handler.rs  utils.rs
src/dbus/: local_server.rs  server.rs
src/package_managers/: apt.rs  apt_pop.rs  flatpak.rs  mod.rs  nix.rs
src/service/: session.rs  system.rs
