[package]
name = "pop-system-updater"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "MPL-2.0"
publish = false

[dependencies]
anyhow = "1.0.56"
apt-cmd = "0.3.0"
as-result = "0.2.1"
async-stream = "0.3.3"
better-panic = "0.3.0"
bytesize = "1.1.0"
enumflags2 = "0.7.5"
flume = "0.10.12"
fork = "0.1.19"
futures = "0.3.21"
isahc = "1.7.0"
libc = "0.2.123"
notify-rust = { version = "4.5.8", default-features = false, features = ["dbus"] }
os-release = "0.1.0"
ron = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_repr = "0.1.7"
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
users = "0.11.0"
whitespace-conf = "1.0.0"
zbus = "2.1.1"
zvariant = { version = "3.1.2", features = ["enumflags2"] }
chrono = "0.4.19"
pop-task-scheduler = { path = "../scheduler" }

[dependencies.tokio]
version = "1.17.0"
features = ["rt", "rt-multi-thread", "fs", "io-util", "macros", "process", "time"]

[features]
