[package]
name = "pop-system-updater"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "MPL-2.0"
publish = false

[dependencies]
anyhow = "1.0.66"
apt-cmd = { git = "https://github.com/pop-os/apt-cmd" }
as-result = "0.2.1"
async-cron-scheduler = { path = "../scheduler", features = ["logging"] }
async-fetcher = { version = "0.10.0", features = ["reqwest"] }
async-stream = "0.3.3"
better-panic = "0.3.0"
bytesize = "1.1.0"
chrono = "0.4.22"
enumflags2 = "0.7.5"
flume = "0.10.14"
fork = "0.1.20"
futures = "0.3.25"
libc = "0.2.137"
notify-rust = { version = "4.5.10", default-features = false, features = ["dbus"] }
os-release = "0.1.0"
pop-shop-zbus = { path = "../shop-zbus" }
reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls", "trust-dns"] }
ron = "0.8.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_repr = "0.1.9"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
users = "0.11.0"
whitespace-conf = "1.0.0"
zbus = { version = "3.4.0", default-features = false, features = ["tokio"] }
zvariant = { version = "3.7.1", features = ["enumflags2"] }

[dependencies.tokio]
version = "1.21.2"
features = ["full"]

[features]
