[package]
name = "gtk-ffi"
version = "0.1.0"
edition = "2021"
description = "Dynamically link the pop-system-updater-gtk widget"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cdylib-link-lines = "0.1.4"

[lib]
name = "pop_system_updater_gtk"
crate-type = [ "cdylib" ]

[dependencies]
glib = "0.16.2"
gtk = "0.16.0"
gtk-sys = "0.16.0"
pop-system-updater-gtk = { path = "../gtk" }
