[package]
name = "pop-system-updater-gtk"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"

[dependencies]
cascade = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
flume = "0.10.12"
futures = "0.3.21"
gio = "0.15.10"
glib = "0.15.10"
gtk = "0.15.4"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
once_cell = "1.10.0"
pop-system-updater = { path = "../" }
postage = "0.4.1"
ron = "0.7.0"
rust-embed = "6.3.0"
smol = "1.2.5"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
zbus = "2.1.1"

[features]
