[package]
name = "pop-system-updater-gtk"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
license = "MPL-2.0"
publish = false

[dependencies]
cascade = "1.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
flume = "0.10.12"
futures = "0.3.21"
gio = "0.15.11"
glib = "0.15.11"
gtk = "0.15.5"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
once_cell = "1.10.0"
pop-system-updater = { path = "../daemon" }
postage = "0.5.0"
ron = "0.7.0"
rust-embed = "6.4.0"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
zbus = { version = "2.2.0", default-features = false, features = ["tokio"] }

[dependencies.tokio]
version = "1.18.0"
features = ["rt", "macros"]

[features]
